--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -38,6 +38,25 @@ suites:
         backups_defaults:
           non_cloud_container: testContainer
       rackspace:
+        datacenter: 'DFW'
+        cloud_credentials:
+          username: nobody
+          api_key:  secret
+  - name: cloud
+    run_list:
+      - recipe[rackspace_cloudbackup::cloud]
+    attributes:
+      rackspace_cloudbackup:
+        mock: true
+        backups:
+          - location: /etc
+            enabled: false
+          - location: /home
+            enabled: false
+        backups_defaults:
+          cloud_notify_email: root@localhost
+      rackspace:
+        datacenter: 'DFW'
         cloud_credentials:
           username: nobody
           api_key:  secret
