--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+# Rubocop,  we're buddies and all,  but we're going to have to disagree on the following -
+
 # Disable requirement of "encoding" headers on files
 Encoding:
   Enabled: false
@@ -24,10 +26,19 @@ IfUnlessModifier:
 CyclomaticComplexity:
   Max: 10
 
-# Raise allowed parameter count to 8, 5 is a bit low.
-ParameterLists:
-  Max: 8
-
-# 123_456 doesn't add value IMO.
-NumericLiterals:
+# Disable Single Space before first arg
+SingleSpaceBeforeFirstArg:
   Enabled: false
+
+# Don't force a word array unless 5 elements
+WordArray:
+  MinSize: 5
+
+# Don't complain about unused block args
+UnusedBlockArgument:
+  Enabled: false
+
+AllCops:
+  Include:
+    - '**/metadata.rb'
+    - '**/*.rb'
