--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,30 +1,49 @@
 ---
-driver_plugin: vagrant
+driver:
+  name: vagrant
 driver_config:
-  require_chef_omnibus: latest
-  customize:
-    memory: 512
+  require_chef_omnibus: true
+
+provisioner:
+  name: chef_zero
+  client_rb:
+    environment: _default
+  attributes:
+    apt:
+      compile_time_update: true
+    openssh:
+      server:
+        password_authentication: 'yes'
+        permit_root_login: 'yes'
+    ntp:
+      apparmor_enabled: false
+    authorization:
+      sudo:
+        users: ['vagrant']
+        passwordless: true
+    platformstack:
+      iptables:
+        allow_ssh_from_world: true
+      cloud_monitoring:
+        enabled: false
+      cloud_backup:
+        enabled: false
+      omnibus_updater:
+        enabled: false
 
 platforms:
-- name: ubuntu-12.04
-  driver_config:
-    box: opscode-ubuntu-12.04
-    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
-  run_list:
-  - recipe[apt]
-- name: centos-6.5
-  driver_config:
-    box: opscode-centos-6.5
-    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.4_chef-provisionerless.box
-- name: debian-7.2.0
-  driver_config:
-    box: opscode-debian-7.2.0
-    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.2.0_chef-provisionerless.box
-  run_list:
-  - recipe[apt]
+  - name: ubuntu-12.04
+    run_list:
+    - recipe[apt]
+  - name: ubuntu-14.04
+    run_list:
+    - recipe[apt]
+  - name: centos-6.5
+    run_list:
+    - recipe[yum]
 
 suites:
-  - name: cloud
+  - name: default
     run_list:
       - recipe[rackspace_cloudbackup::cloud]
     attributes:
